--- a/LazyCafe/app/src/main/AndroidManifest.xml
+++ b/LazyCafe/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="kmitl.bank58070041.finalproject.lazycafe">
 
     <application
@@ -12,7 +13,6 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name">
-
         </activity>
         <activity android:name=".BuyCoffee" />
         <activity
@@ -20,10 +20,27 @@
             android:label="@string/app_name">>
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+            <meta-data android:name="com.facebook.sdk.ApplicationId"
+                android:value="@string/facebook_app_id"/>
+            <activity android:name="com.facebook.FacebookActivity"
+                android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
+                android:label="@string/app_name"
+                tools:ignore="WrongManifestParent" />
+            <activity
+                android:name="com.facebook.CustomTabActivity"
+                android:exported="true"
+                tools:ignore="WrongManifestParent">
+                <intent-filter>
+                    <action android:name="android.intent.action.VIEW" />
+                    <category android:name="android.intent.category.DEFAULT" />
+                    <category android:name="android.intent.category.BROWSABLE" />
+                    <data android:scheme="@string/fb_login_protocol_scheme" />
+                </intent-filter>
+            </activity>
         </activity>
     </application>
-
+    <uses-permission android:name="android.permission.INTERNET"/>
 </manifest>
