extra page and kind coffee page

--- a/LazyCafe/app/src/main/AndroidManifest.xml
+++ b/LazyCafe/app/src/main/AndroidManifest.xml
@@ -53,8 +53,9 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".controller.activity.LoginActivity"
-            android:screenOrientation="portrait"></activity>
-        <activity android:name=".controller.activity.KindCoffeepage"></activity>
+            android:screenOrientation="portrait" />
+        <activity android:name=".controller.activity.KindCoffeepage" />
+        <activity android:name=".controller.activity.ExtraActivity"></activity>
     </application>
 
 </manifest>
