--- a/LazyCafe/app/src/main/AndroidManifest.xml
+++ b/LazyCafe/app/src/main/AndroidManifest.xml
@@ -41,7 +41,8 @@
         </activity>
         <activity
             android:name=".controller.activity.MainActivity"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait">
+        </activity>
         <activity
             android:name=".controller.activity.TypeCoffeePage"
             android:screenOrientation="portrait" />
@@ -53,6 +54,7 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
 
         </activity>
         <activity android:name=".controller.activity.KindCoffeepage" />
